# goblin-assistant

./: .coveragerc  .dockerignore  .env.example  .env.production  .env.staging  .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .secret-scan-allowlist.txt  .vercelignore  AGENTS.md  AI_PROVIDER_INTEGRATION_REPORT.md  ATTESTATION_WEBHOOK_DEPLOYMENT.md  AUTHENTICATION_IMPROVEMENTS.md  BACKEND_COMMENT_AUDIT_REPORT.md  BROKEN_ITEMS.md  CHANGELOG.md  CHAT_ERROR_FIX.md  CHAT_FUNCTIONALITY_RESTORED.md  CI_CD_PIPELINE_README.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNICATION_SETUP_COMPLETE.md  COMPLETION_REPORT.md  COMPONENT_ANALYSIS_REPORT.md  COMPONENT_LIBRARY.md  CONFIGURATION_VERIFICATION.md  CONTRIBUTING.md  CULTURAL_RULES.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_COMPLETION_GUIDE.md  DEPLOYMENT_QUICKREF.md  DEPLOYMENT_README.md  DESIGN_TOKENS.md  Dockerfile  Dockerfile.dev  Dockerfile.fastapi  Dockerfile.fly  (+188 more)
apps/api/: .env.example  .gitignore  architecture-boundaries.toml  architecture-capabilities.json  conftest.py  enable_pgvector.py  init_db.py  pyproject.toml  pyrightconfig.json  quick_validate.py  requirements-vector.txt  requirements.txt  run-tests.sh  run_migrations.py
apps/api/alembic/versions/: 001_initial_vector_setup.py  003_add_message_attachments.py  005_add_user_sessions.py  006_create_domain_events.py  007_create_feedback_events.py  008_add_quality_score_to_message_outcomes.py  009_add_typed_memory_columns.py  010_add_entity_graph_tables.py  010_add_memory_state_lifecycle.py  011_add_user_profiles.py
apps/api/scripts/: profile_hotpaths.py
apps/api/scripts/root-tools/: benchmark_providers.py  restore_gcp_creds.py  sandbox_demo.py  sandbox_runner.py  sandbox_worker.py  set_vertex_from_cli.py  validate_security_implementation.py
apps/api/src/api/: .coverage  .env.example  README.md  _version.py  api_keys_router.py  api_models.py  api_router.py  app_factory.py  artifact_cleanup.py  artifact_service.py  attestation_  attestation_service.py  attestation_webhook.py  celery_app.py  celery_monitoring.py  chat_router.py  cloudflare_integration.py  conftest.py  coverage.xml  exception_handlers.py  health.py  health_checks.py  health_core.py  input_validation.py  lifespan.py  main.py  middleware.py  monitoring.py  ops_health.py  ops_router.py  optimizations.py  orchestration_router.py  parse_router.py  raptor_router.py  route_mounting.py  routing_router.py  sandbox_api.py  sandbox_config.py  sandbox_job_helpers.py  sandbox_metrics.py  (+20 more)
apps/api/src/api/admin_routes/: __init__.py  provider_state.py
apps/api/src/api/api_router_pkg/: __init__.py  helpers.py
apps/api/src/api/assistant_tools/: __init__.py  contracts.py  executor.py  registry.py
apps/api/src/api/attestation/: __init__.py  api.py  models.py  providers.py  service.py  singleton.py
apps/api/src/api/attestation_webhook_pkg/: __init__.py  auth.py  middleware.py  models.py  routes.py
apps/api/src/api/auth/: __init__.py  oauth.py  passkeys.py  router.py
apps/api/src/api/bootstrap/: __init__.py  middleware.py  routes.py  startup.py
apps/api/src/api/capabilities/: __init__.py  models.py  permissions.py  registry.py
apps/api/src/api/chat_router/: __init__.py  _runtime.py  archiving.py  constants.py  contextual.py  conversations.py  helpers.py  messages.py  schemas.py  service_accessors.py  streaming.py  uploads.py
apps/api/src/api/config/: archetypes.py  mode_addendums.py  providers.py  redis_config.py  system_config.py  system_prompt.py
apps/api/src/api/core/: contracts.py  csrf_manager.py  error_types.py  errors.py  orchestration.py  rate_limiter_auth.py  redis_client.py  route_lifecycle.py  router.py
apps/api/src/api/data_agent/: __init__.py  indexer.py
apps/api/src/api/departments/: __init__.py  dispatcher.py  models.py  products.py  registry.py  router.py
apps/api/src/api/docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  INTEGRATIONS.md  MODULAR_BOUNDARIES.md  README.md  SETUP.md
apps/api/src/api/legacy/: cache_manager.py
apps/api/src/api/middleware/: __init__.py  rate_limiter.py
apps/api/src/api/observability/: __init__.py  alert_handlers.py  alerting_system.py  context_snapshotter.py  context_snapshotter_logging.py  context_snapshotter_redaction.py  context_snapshotter_reports.py  debug_context_router.py  debug_retrieval_router.py  debug_router.py  debug_system_router.py  debug_write_router.py  decision_logger.py  events.py  memory_logger.py  metrics_collector.py  metrics_router.py  migration_metrics.py  retrieval_tracer.py  retrieval_tracer_helpers.py  retrieval_tracer_logging.py  tool_tracer.py
apps/api/src/api/ops/: aggregator.py  audit.py  circuit_breaker.py  performance_metrics.py  security.py
apps/api/src/api/ops_health_pkg/: __init__.py  providers.py  summary.py
apps/api/src/api/ops_routes/: __init__.py  _colab_store.py  aggregated.py  circuit_breakers.py  colab_worker.py  gcs_selfhosted.py  health.py  performance.py  rovo_dev.py  security_audit.py  sentry_webhook.py  shared.py
apps/api/src/api/pipeline/: __init__.py  context.py  pipeline.py  tool_selection.py
apps/api/src/api/providers/: README.md  __init__.py  aliyun_provider.py  anthropic_provider.py  azure_provider.py  base.py  colab_worker_provider.py  contracts.py  dispatcher.py  dispatcher_utils.py  gemini.py  generic.py  google_cloud_provider.py  google_cloud_selfhosted_provider.py  groq.py  llamacpp_provider.py  metrics.py  mock_provider.py  model_registry.py  ollama_provider.py  openai_compatible.py  openai_provider.py  pricing.py  provider_config_runtime.py  provider_registry.py  quota_service.py  routing_strategies.py  rovo_dev_provider.py  siliconeflow.py  supabase_events.py  vertex_provider.py
apps/api/src/api/routes/: __init__.py  account_router.py  debug.py  privacy.py  providers_models.py  routing_analytics.py  support_router.py
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/config/: cost_rates.json  goblins.yaml.sample
src-tauri/src/: config.rs  cost_estimator.rs  goblin_runtime.rs  goblins.yaml  ipc.rs  main.rs  memory.rs
(+2720 files in other folders)
