[package]
name = "goblinos-desktop"
version = "0.1.0"
authors = ["ForgeMonorepo"]
edition = "2021"
description = "GoblinOS Desktop Tauri backend"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
lazy_static = "1.4"
tauri-plugin-shell = "2.0"
tokio = { version = "1.0", features = ["full"] }
keyring = "2.3"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "goblinos-desktop"
path = "src/main.rs"

[package.metadata]
readme = "src-tauri/README.md"
