[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goblin-assistant-api"
version = "0.1.0"
description = "Goblin Assistant FastAPI backend"
requires-python = ">=3.11"
readme = "src/api/README.md"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["api*"]

[tool.pytest.ini_options]
cache_dir = "/Volumes/GOBLINOS 1/apps/.tmp/pytest_cache"
testpaths = ["src/api", "src/api/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--disable-warnings", "--tb=short"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = [
  "^src/api/docs/.*",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "PL",
  "SIM",
  "ARG",
  "ASYNC",
]
ignore = [
  "E402",
  "E501",
]

[tool.ruff.lint.pylint]
max-statements = 40
max-branches = 10
max-returns = 8
max-nested-blocks = 3
